--- a/stylesheets/kintassa_gallery.css
+++ b/stylesheets/kintassa_gallery.css
@@ -5,10 +5,27 @@ Copyright: Copyright (c) 2011 Kintassa.
 License: All rights reserved.  Contact Kintassa should you wish to use this product.
 */
 
-div.kintassa_gallery {
+div.kintassa-gallery-app {
 	background-color: cornflowerblue;
 	width: 300px;
 	height: 200px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+div.kintassa-gallery-app ul.slideshow-image-list li {
+	visibility: hidden;
+}
+
+div.kintassa-gallery-app ul.slideshow-image-list li.first-item {
+	visibility: visible;
+}
+
+div.kintassa-gallery-app ul.slideshow-image-list li {
+	list-style-type: none;
+}
+
+div.kintassa-gallery-app ul.slideshow-image-list,
+div.kintassa-gallery-app ul.slideshow-image-list li {
+	margin: 0;
 }
