Adjust spacing of Add Gallery button in main galleries list

--- a/stylesheets/kintassa_gallery.css
+++ b/stylesheets/kintassa_gallery.css
@@ -117,3 +117,9 @@ div.kintassa-page-nav {
 	margin-left: 3px;
 	margin-right: 3px;
 }
+
+table.kintassa-form-el {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
